--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
 
     <div class="chart-container">
-        <canvas id="rechargeChart" height="300"></canvas>
+        <canvas id="rechargeChart" height="500"></canvas>
     </div>
 
     <script>
@@ -63,7 +63,7 @@
         const rechargeChart = new Chart(ctx, {
             type: 'bar',
             data: {
-                labels: ['30', '50', '100', '200'],
+                labels: ['金额：30', '金额：50', '金额：100', '金额：200'],
                 datasets: [{
                     label: '联通微信-慢充',
                     data: [26000, 12500, 19000, 24901],
