--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             background: linear-gradient(135deg, #f8fafc 0%, #e0e7ef 100%);
             margin: 0;
             min-height: 100vh;
+            padding-bottom: 32px;
         }
         h1 {
             text-align: center;
@@ -28,6 +29,7 @@
             box-shadow: 0 4px 24px 0 rgba(60, 72, 88, 0.10);
             padding: 32px 24px 24px 24px;
             min-height: 420px;
+            margin-bottom: 32px;
         }
         #input-table-container {
             width: 100%;
@@ -37,6 +39,7 @@
             border-radius: 18px;
             box-shadow: 0 4px 24px 0 rgba(60, 72, 88, 0.10);
             padding: 32px 24px 24px 24px;
+            margin-bottom: 32px;
         }
         table {
             width: 100%;
